modified attribute of iframe

--- a/assets/app-hdm/app_mode_creating_project.html
+++ b/assets/app-hdm/app_mode_creating_project.html
@@ -12,7 +12,7 @@ grand_parent: app(HDM)
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>dialock creating project</title>
         <style>
-            .video {width: 100%; height: 100%; position: absolute; object-fit: fill;}
+            .video {width: 100%; height: 100%; position: absolute;}
             .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
             #head {margin-bottom: 1em;}
         </style>
@@ -23,15 +23,11 @@ grand_parent: app(HDM)
         <p>您可以在该app中创建一个项目（虚拟店铺），进而将实体店铺中的设备加入其中，进行统一管理。如下视频向您展示了创建项目的步骤。</p>
         <div class="responsive">
             <iframe src="//player.bilibili.com/player.html?aid=430619019&bvid=BV1FG411G7xK&cid=832355131&page=1&high_quality=1&danmaku=0" 
-            allowfullscreen scrolling="no" frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen scrolling="no" frameborder="0"
             class="video"> </iframe>
         </div>
         <p>您也可以点击<a href="https://www.bilibili.com/video/BV1FG411G7xK?share_source=copy_web&vd_source=f83f1d78e24d7e280d73a0dd2122ddfb">此处</a>
         至B站观看此视频</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/qDzLjwe0YQE" 
-        title="YouTube video player" frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen></iframe>
+        
     </body>
 </html>
