--- a/assets/app-hdm/app_mode_creating_project.html
+++ b/assets/app-hdm/app_mode_creating_project.html
@@ -28,6 +28,7 @@ grand_parent: app(HDM)
         </div>
         <p>您也可以点击<a href="https://www.bilibili.com/video/BV1FG411G7xK?share_source=copy_web&vd_source=f83f1d78e24d7e280d73a0dd2122ddfb">此处</a>
         至B站观看此视频</p>
-        
+        <iframe frameborder="0" src="https://tv.sohu.com/s/sohuplayer/iplay.html?bid=384139246&autoplay=true&disablePlaylist=true" 
+        allowFullScreen="true" scrolling="no"></iframe>
     </body>
 </html>
