transferred to sohu video for existing app mode videos

--- a/assets/app-hdm/app_mode_dashboard.html
+++ b/assets/app-hdm/app_mode_dashboard.html
@@ -22,11 +22,8 @@ grand_parent: app(HDM)
     <h2 id="head">{{ page.title }}</h2>
     <p>您可以在“控制面板”的界面中，看到待完成的任务。</p>
     <div class="responsive">
-        <iframe src="//player.bilibili.com/player.html?aid=985535870&bvid=BV13t4y1j733&cid=833558894&page=1&high_quality=1&danmaku=0" 
-        allowfullscreen scrolling="no" frameborder="0" 
-        sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts" class="video"> </iframe>
+        <iframe frameborder="0" src="https://tv.sohu.com/s/sohuplayer/iplay.html?bid=384406127&autoplay=true&disablePlaylist=true" 
+        allowFullScreen="true" scrolling="no" class="video"></iframe>
     </div>
-    <p>您也可以点击<a href="https://www.bilibili.com/video/BV13t4y1j733?share_source=copy_web&vd_source=f83f1d78e24d7e280d73a0dd2122ddfb">此处</a>
-    至B站观看此视频</p>
 </body>
 </html>
