added ft120 videos

--- a/FT120.html
+++ b/FT120.html
@@ -2,11 +2,11 @@
 layout: page
 title: FT120
 permalink: /FT120
+has_children: true
 ---
 <html>
     <head>
         <style>
-            img {width: 50%; height: auto;}
             .title {color: #991601;}
             table {text-align: left; table-layout: auto; width: fit-content;}
             th {width: 20%;}
@@ -14,6 +14,8 @@ permalink: /FT120
                 float: left;
                 width: 50%;
             }
+            .responsive {float: right; width: 50%; height: auto; margin-top: 4em;}
+
         </style>
     </head>
     <body>
@@ -32,6 +34,7 @@ permalink: /FT120
             &calledFromFrame=N&application_id=1pe0Y6A2kgR9I8D6Uz7BzQ%3D%3D&fcc_id=TCN006">此处</a>查看认证详细资料
         </p>
         <p>点击<a href="/assets/FT120/catalog/FT120英文单页.pdf">此处</a>查看产品单页</p>
-        <img src="/assets/FT120/FT120.jpg" alt="">
+        
+        <div class="responsive"><img src="/assets/FT120/FT120.jpg" alt=""></div>
     </body>
 </html>
