--- a/FT200.html
+++ b/FT200.html
@@ -11,11 +11,10 @@ has_children: true
         table {margin-top: 5%;}
         .choices_container {
             float: left;
-            padding-right: 1%
-        }
-        .choices_container {
+            padding-right: 1%;
             display: none;
         }
+        
         figcaption {color: #991601; text-align: center; font-size:medium;}
     </style>
     <link rel="stylesheet" href="\css\lightbox.min.css">
