made ft200-add-on increase to a higher level

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -1,8 +1,7 @@
 ---
 layout: page
-title: FT200功能扩展
-parent: 功能扩展文件/Add-on
-grand_parent: app(HDM)
+title: FT200功能扩展/add-on
+parent: app(HDM)
 ---
 <!DOCTYPE html>
 <html lang="en">
