added another videos

--- a/assets/app-hdm/self-test.html
+++ b/assets/app-hdm/self-test.html
@@ -3,7 +3,13 @@ layout: page
 title: 设备自检/self test
 parent: app(HDM)
 ---
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>dialock self-test</title>
     <style>
         h2 {text-align: center;}
         .video-wrapper {padding-bottom: 75%; position: relative; margin-top: 3%;}
@@ -16,7 +22,8 @@ parent: app(HDM)
         使用该app中的“设备自检”功能，可以很轻松的检测锁头是否可以正常开启，是否状态正常，卡片读取距离，位置等信息。如下视频所示。
     </p>
     <div class="video-wrapper">
-        <iframe src="//player.bilibili.com/player.html?aid=594584388&bvid=BV1uq4y1i7dT&cid=543953108&page=1" 
-        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
+        <iframe frameborder="0" src="https://tv.sohu.com/s/sohuplayer/iplay.html?bid=384989042&autoplay=true&disablePlaylist=true" 
+        allowFullScreen="true" scrolling="no" class="video"></iframe>
     </div>
 </body>
+</html>
