added a table for showing add mode materials

--- a/app(HDM).html
+++ b/app(HDM).html
@@ -6,7 +6,7 @@ has_children: true
 ---
 <head>
     <style>
-        table {margin-top: 5%;}
+        table {margin-top: 3%;}
         caption {text-align: left;}
         .panel {
             background-color: beige;
@@ -36,7 +36,7 @@ has_children: true
             <td>1套(3张)</td>
         </tr>
         <tr>
-            <td><a href="\assets\app-hdm\add-on.html">宏文件(add-on)</a></td>
+            <td><a href="/assets/app-hdm/FT200-add-on.html">宏文件(add-on)</a></td>
             <td>910.52.191</td>
             <td>1</td>
         </tr>
