--- a/assets/app-hdm/app_mode.html
+++ b/assets/app-hdm/app_mode.html
@@ -13,6 +13,8 @@ has_children: true
     <title>dialock app mode</title>
     <style>
         #head {margin-bottom: 1em;}
+        table {margin-top: 3%;}
+
     </style>
 </head>
 <body>
@@ -21,5 +23,48 @@ has_children: true
         您可以在该app(HMDM)中，创建一个虚拟的店铺，并将实体店铺中的所有Dialock设备添加至这个虚拟的店铺中。进而在app端进行所有设备的配置操作。
         例如添加，删除员工卡。设置报警时间等。
     </p>
+    <table>
+        <caption>使用app模式，需要用到以下物料：</caption>
+        <tr>
+            <th>名称</th>
+            <th>编号</th>
+            <th>数量</th>
+        </tr>
+        <tr>
+            <td>蓝牙AKC卡片</td>
+            <td>917.64.980</td>
+            <td>1套(3张)</td>
+        </tr>
+        <tr>
+            <td>许可证（20个设备）</td>
+            <td>910.52.951</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>许可证（50个设备）</td>
+            <td>910.52.952</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>许可证（100个设备）</td>
+            <td>910.52.953</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>许可证（200个设备）</td>
+            <td>910.52.954</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td><a href="/assets/app-hdm/FT200-add-on.html">宏文件(add-on)（选配）</a></td>
+            <td>910.52.190</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td><a href="\assets\app-hdm\apk.html">app(HDM)</a></td>
+            <td></td>
+        </tr>
+    </table>
+    <p>客户根据项目的规模，采购上述四个许可证中的一个。四个许可证均默认配备报警宏。若客户需要其它扩展功能，可使用另外采购宏的方法实现。</p>
 </body>
 </html>
