modified words for replacing terminals

--- a/assets/app-hdm/app_mode_replacing_terminals.html
+++ b/assets/app-hdm/app_mode_replacing_terminals.html
@@ -20,7 +20,7 @@ grand_parent: app(HDM)
     </head>
     <body>
         <h2 id="head">{{ page.title }}</h2>
-        <p>您可以在该app中创建一个项目（虚拟店铺），进而将实体店铺中的设备加入其中，进行统一管理。如下视频向您展示了创建项目的步骤。</p>
+        <p>您可以将某一个设备从项目（虚拟店铺）中删除，也可以将之替换成其它的Dialock设备。</p>
         <div class="responsive">
             <iframe frameborder="0" src="https://tv.sohu.com/s/sohuplayer/iplay.html?bid=384986812&autoplay=true&disablePlaylist=true" 
             allowFullScreen="true" scrolling="no" class="video"></iframe>
