added another two videos for app mode

--- a/assets/app-hdm/app_mode_creating_project.html
+++ b/assets/app-hdm/app_mode_creating_project.html
@@ -3,6 +3,7 @@ layout: page
 title: 创建项目（虚拟店铺）
 parent: app模式/app mode
 grand_parent: app(HDM)
+nav_order: 1
 ---
 <!DOCTYPE html>
 <html lang="en">
