--- a/assets/app-hdm/app_mode_saving_projects.html
+++ b/assets/app-hdm/app_mode_saving_projects.html
@@ -1,9 +1,8 @@
 ---
 layout: page
-title: 添加许可证
+title: 输出/导入项目配置
 parent: app模式/app mode
 grand_parent: app(HDM)
-nav_order: 2
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +10,7 @@ nav_order: 2
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>dialock adding licenses</title>
+        <title>dialock saving projects</title>
         <style>
             .video {width: 100%; height: 100%; position: absolute;}
             .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
@@ -23,7 +22,7 @@ nav_order: 2
         <h2 id="head">{{ page.title }}</h2>
         <p>您可以在项目（虚拟店铺）中添加许可证，来提升项目可添加设备的数量。并激活分组，定制卡片有效时间等扩展功能。</p>
         <div class="responsive">
-            <iframe frameborder="0" src="https://tv.sohu.com/s/sohuplayer/iplay.html?bid=385284086&autoplay=true&disablePlaylist=true" 
+            <iframe frameborder="0" src="https://tv.sohu.com/s/sohuplayer/iplay.html?bid=385579008&autoplay=true&disablePlaylist=true" 
             allowFullScreen="true" scrolling="no" class="video"></iframe>
             
         </div>
