added another video for ft200 aux-in

--- a/assets/app-hdm/apk.html
+++ b/assets/app-hdm/apk.html
@@ -3,7 +3,13 @@ layout: page
 title: 安装文件/APK
 parent: app(HDM)
 ---
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>apk</title>
     <style>
         .responsive {float: right; width: 30%; height: auto;}
     </style>
@@ -16,5 +22,5 @@ parent: app(HDM)
             此处</a>下载安装文件;</li>
         <li>对于苹果手机(Iphone)，请在苹果应用商店(App Store)搜索关键字'Hafele Dialock'，即可找到该安装文件。</li>
     </ul>
-    
 </body>
+</html>
