modified words for saving project settings

--- a/assets/app-hdm/app_mode_saving_projects.html
+++ b/assets/app-hdm/app_mode_saving_projects.html
@@ -20,7 +20,7 @@ grand_parent: app(HDM)
     </head>
     <body>
         <h2 id="head">{{ page.title }}</h2>
-        <p>您可以在项目（虚拟店铺）中添加许可证，来提升项目可添加设备的数量。并激活分组，定制卡片有效时间等扩展功能。</p>
+        <p>您可以将项目的配置生成一个文件并导出，保存在HMDM app外部。并在需要的时候导入到app中。</p>
         <div class="responsive">
             <iframe frameborder="0" src="https://tv.sohu.com/s/sohuplayer/iplay.html?bid=385579008&autoplay=true&disablePlaylist=true" 
             allowFullScreen="true" scrolling="no" class="video"></iframe>
