added add-on code(dm*****) in the add-on video page

--- a/assets/FT200/FT200_aux_port.html
+++ b/assets/FT200/FT200_aux_port.html
@@ -4,7 +4,13 @@ title: 扩展接口/aux-port
 parent: FT200
 has_children: true
 ---
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ft200 aux port</title>
     <style>
         p {bottom: 10%;}
         h2 {bottom: 10px;}
@@ -36,5 +42,6 @@ has_children: true
         </table>
         <p>请点击<a download href="\assets\FT200\eSFH.pdf">此处</a>下载LED和蜂鸣器接口的规格文件</p>
     </div>
-   
 </body>
+</html>
+
