--- a/assets/FT200/FT200_aux_inter_locking.html
+++ b/assets/FT200/FT200_aux_inter_locking.html
@@ -4,7 +4,13 @@ title: 互锁/inter-locking
 parent: 扩展接口/aux-port
 grand_parent: FT200
 ---
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ft200 inter-locking</title>
     <style>
         .title {text-align: center;}
         .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
@@ -15,10 +21,12 @@ grand_parent: FT200
     <h2 class="title">{{page.title}}</h2>
     <p style="margin-top: 3%;">
         FT200支持同时监控锁头EFL3和扩展输入接口的状态。检测到任何一个端口没有锁闭，即启动蜂鸣器报警。并支持将锁头EFL3的状态作为触发扩展输出的条件。
-        以下视频中，刷卡后，锁头EFL3开启，扩展输出继电器被触发（万用表蜂鸣器响铃）。只有当EFL3锁闭后，扩展输出继电器才可以回到初始状态（万用表蜂鸣器停止响铃）。
+        以下视频中，刷卡后，锁头EFL3开启，扩展输出继电器被触发（万用表蜂鸣器响铃）。只有当EFL3锁闭后，
+        扩展输出继电器才可以回到初始状态（万用表蜂鸣器停止响铃）。（宏代码：DM22020）
     </p>
     <div class="responsive">
         <iframe src="//player.bilibili.com/player.html?aid=471889603&bvid=BV1UT411w7vM&cid=800087933&page=1" 
         scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"></iframe>
     </div>
 </body>
+</html>
