--- a/assets/FT200/FT200_aux_monitor_both.html
+++ b/assets/FT200/FT200_aux_monitor_both.html
@@ -20,7 +20,7 @@ grand_parent: FT200
 <body>
     <h2 class="title">{{page.title}}</h2>
     <p style="margin-top: 3%;">您可以使用FT200同时监控锁头EFL3和扩展输入接口。您可以将门磁接入扩展输入接口。如下视频中，
-        报警启动时间设置为刷卡后十秒。若未刷卡门磁断开，则警报立刻响起。刷卡十秒后警报响起，只有当EFL3和门磁全部闭合，才可以使警报声停止。</p>
+        报警启动时间设置为刷卡后十秒。若未刷卡门磁断开，则警报立刻响起。刷卡十秒后警报响起，只有当EFL3和门磁全部闭合，才可以使警报声停止。（宏代码：DM22023）</p>
     <div class="responsive">
         <iframe frameborder="0" src="https://tv.sohu.com/s/sohuplayer/iplay.html?bid=386785366&autoplay=true&disablePlaylist=true" 
         allowFullScreen="true" scrolling="no" class="video"></iframe>
