--- a/assets/FT200/FT200_aux_output_alarm.html
+++ b/assets/FT200/FT200_aux_output_alarm.html
@@ -16,7 +16,7 @@ grand_parent: FT200
     <p style="margin-top: 3%;">
         FT200支持使用其扩展输出接口接入外部警报电路，从而实现当锁头未及时关闭时，警报电路使用声光等方式发出提示。
         如下视频所示，万用表接入继电器的常开（NO）和COM端口，当锁头超时未锁闭时，常开（NO）和COM端口导通，万用表蜂鸣器开始响铃。
-        当锁头锁闭，万用表蜂鸣器响铃停止。FT200只提供导通，断开的控制功能，不为电路供电。
+        当锁头锁闭，万用表蜂鸣器响铃停止。FT200只提供导通，断开的控制功能，不为电路供电。（宏代码：DM22011）
     </p>
     <div class="responsive">
         <iframe src="//player.bilibili.com/player.html?aid=597101008&bvid=BV1DB4y1X7JD&cid=735476990&page=1" 
