--- a/assets/FT200/FT200_aux_output_lock.html
+++ b/assets/FT200/FT200_aux_output_lock.html
@@ -16,7 +16,7 @@ grand_parent: FT200
     <p style="margin-top: 3%;">
         FT200支持使用其扩展输出端口接入包括锁头在内的用电设备。可以使用输出继电器的常开（NO）和COM端口将FT200接入用电设备的电路中。
         刷卡后，继电器的常开（NO）和COM端口导通，电路闭合，使得用电设备处于工作状态。FT200只提供导通，断开的控制功能，不为电路供电。
-        如下视频中，导通时间设定为八秒钟。刷卡后，万用表蜂鸣器持续响铃八秒钟，八秒钟过后停止。该导通时间可调。
+        如下视频中，导通时间设定为八秒钟。刷卡后，万用表蜂鸣器持续响铃八秒钟，八秒钟过后停止。该导通时间可调。（宏代码：DM22010）
     </p>
     <div class="responsive">
         <iframe src="//player.bilibili.com/player.html?aid=597044302&bvid=BV1aB4y1X7ot&cid=735478956&page=1" 
