modified the words of add-on page

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -16,11 +16,8 @@ parent: app(HDM)
 </head>
 <body>
     <h3 id="title">请根据对应的AKC序列号，点击以下链接下载add-on</h3>
-    <ol>
-        <li>'DM22005'可激活报警功能（以下未额外标注均为此宏文件）</li>
-        <li>'DM22009'可激活报警功能和分别控制功能（读头#1->锁头#1和#2，读头#2->锁头#3和#4）</li>
-        <li>'DM22015'可激活报警功能和分别控制功能（读头#1->锁头#1,#2和#3，读头#2->锁头#4）</li>
-    </ol>
+    <p>FT200控制器搭载两个读头接口和四个锁头接口。您可以任意指定读头和锁头之间的对应关系。定制宏时，请您明确指出您需要如何对应。
+        如读头#1对应锁头#1，读头#2对应锁头#1，#2和#3。</p>
     <div class="row">
         <figure>
             <img src="\assets\app-hdm\port_position.jpg" alt="">
