--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -54,9 +54,9 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 163.dlkAddon">163-165</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 439.dlkAddon">439-441</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 442.dlkAddon">442-444</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM29003-Mod_DM22005.Signed.FT200.000 628.dlkAddon">628-630</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM29003-Mod_DM22005.Signed.FT200.000 628.dlkAddon">628-630(只监控EFL3C)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22017-AlrmPrem FT200 AUX.Signed.FT200.000 628.dlkAddon">628-630(DM22017)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM29004-Mod_DM22023.Signed.FT200.000 628.dlkAddon">628-630(DM22023)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM29004-Mod_DM22023.Signed.FT200.000 628.dlkAddon">628-630(监控EFL3C和磁力锁)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 646.dlkAddon">646-648</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 700.dlkAddon">700-702</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 703.dlkAddon">703-705</a></li>
