added one table for showcasing the sound of various alarms

--- a/FT200.html
+++ b/FT200.html
@@ -4,7 +4,14 @@ title: FT200
 permalink: /FT200
 has_children: true
 ---
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="\css\lightbox.min.css">
+    <link rel="stylesheet" href="\css\ft200.css">
     <style>
         .responsive {float: right; width: 50%; height: auto; margin-top: 4em;}
         .title {color: #991601;}
@@ -17,8 +24,7 @@ has_children: true
         
         figcaption {color: #991601; text-align: center; font-size:medium;}
     </style>
-    <link rel="stylesheet" href="\css\lightbox.min.css">
-    <link rel="stylesheet" href="\css\ft200.css">
+    <title>ft200</title>
 </head>
 <body>
     <h2>
@@ -105,7 +111,28 @@ has_children: true
         <img src="\assets\FT200\ft200_config.jpg" alt="" srcset="">
         <figcaption>FT200典型配置</figcaption>
     </figure>
+    <table>
+        <caption>蜂鸣器列表</caption>
+        <tr>
+            <th>名称</th>
+            <th>编号</th>
+            <th>声音</th>
+        </tr>
+        <tr>
+            <td>内置蜂鸣器</td>
+        </tr>
+        <tr>
+            <td>外接蜂鸣器#1</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>外接蜂鸣器#2</td>
+            <td>237.59.040</td>
+        </tr>
+    </table>
     <div class="responsive"><img src="/assets/FT200/FT200.jpg" alt=""></div>
+    
     <script src="\js\lightbox-plus-jquery.js"></script>
     <script src="\js\ft200_components_selection.js"></script>
 </body>
+</html>
