added the sound file of various buzzer

--- a/FT200.html
+++ b/FT200.html
@@ -120,14 +120,20 @@ has_children: true
         </tr>
         <tr>
             <td>内置蜂鸣器</td>
+            <td>无</td>
+            <td><a href="\assets\FT200\in_alarm.mp3" target="_blank" rel="noopener noreferrer">播放</a></td>
         </tr>
         <tr>
             <td>外接蜂鸣器#1</td>
-            <td></td>
+            <td>237.59.043</td>
+            <td><a href="\assets\FT200\ex_alarm_1.wav" target="_blank" rel="noopener noreferrer">播放</a></td>
+
         </tr>
         <tr>
             <td>外接蜂鸣器#2</td>
             <td>237.59.040</td>
+            <td><a href="\assets\FT200\ex_alarm_2.wav" target="_blank" rel="noopener noreferrer">播放</a></td>
+            
         </tr>
     </table>  
 
