--- a/FT200.html
+++ b/FT200.html
@@ -124,16 +124,15 @@ has_children: true
             <td><a href="\assets\FT200\in_alarm.mp3" target="_blank" rel="noopener noreferrer">播放</a></td>
         </tr>
         <tr>
-            <td>外接蜂鸣器#1</td>
+            <td><a href="\assets\FT200\buzzer.jpg" data-lightbox="alarm">外接蜂鸣器#1</a></td>
             <td>237.59.043</td>
             <td><a href="\assets\FT200\ex_alarm_1.wav" target="_blank" rel="noopener noreferrer">播放</a></td>
 
         </tr>
         <tr>
-            <td>外接蜂鸣器#2</td>
+            <td><a href="\assets\FT200\siren.jpg" data-lightbox="alarm">外接蜂鸣器#2</a></td>
             <td>237.59.040</td>
             <td><a href="\assets\FT200\ex_alarm_2.wav" target="_blank" rel="noopener noreferrer">播放</a></td>
-            
         </tr>
     </table>  
 
