--- a/app(HDM).html
+++ b/app(HDM).html
@@ -10,7 +10,7 @@ has_children: true
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>hmdm app</title>
     <style>
         .video {width: 100%; height: 100%; position: absolute;}
         .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
