--- a/FT120.html
+++ b/FT120.html
@@ -4,37 +4,43 @@ title: FT120
 permalink: /FT120
 has_children: true
 ---
-<html>
-    <head>
-        <style>
-            .title {color: #991601;}
-            table {text-align: left; table-layout: auto; width: fit-content;}
-            th {width: 20%;}
-            .doc {
-                float: left;
-                width: 50%;
-            }
-            .responsive {float: right; width: 50%; height: auto; margin-top: 4em;}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ft120</title>
+    <style>
+        .title {color: #991601;}
+        table {text-align: left; table-layout: auto; width: fit-content;}
+        th {width: 20%;}
+        .doc {
+            float: left;
+            width: 50%;
+        }
+        .responsive {float: right; width: 50%; height: auto; margin-top: 4em;}
 
-        </style>
-    </head>
-    <body>
-        <h2><a class="title"
-            href="https://www.hafele.com.de/en/product/furniture-terminal-ft-120-dialock-for-controlling-efl-locks/000000200003c0e900070023/#SearchParameter=&@QueryTerm=ft120&@P.FF.followSearch=9585&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=22&PDP=true">
-            {{ page.title }}</a>
-        </h2>
-        <table>
-            <tr>
-                <th>编号</th>
-                <td>237.58.111</td>
-            </tr>
-        </table>
-        <p>该产品已取得FCC认证，请点击<a href="/assets/FT120/fcc.pdf">此处</a>下载证书，
-            点击<a href="https://apps.fcc.gov/oetcf/eas/reports/ViewExhibitReport.cfm?mode=Exhibits&RequestTimeout=500
-            &calledFromFrame=N&application_id=1pe0Y6A2kgR9I8D6Uz7BzQ%3D%3D&fcc_id=TCN006">此处</a>查看认证详细资料
-        </p>
-        <p>点击<a href="/assets/FT120/catalog/FT120英文单页.pdf">此处</a>查看产品单页</p>
-        
-        <div class="responsive"><img src="/assets/FT120/FT120.jpg" alt=""></div>
-    </body>
+    </style>
+</head>
+<body>
+    <h2><a class="title"
+        href="https://www.hafele.com.de/en/product/furniture-terminal-ft-120-dialock-for-controlling-efl-locks/000000200003c0e900070023/#SearchParameter=&@QueryTerm=ft120&@P.FF.followSearch=9585&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=22&PDP=true">
+        {{ page.title }}</a>
+    </h2>
+    <table>
+        <tr>
+            <th>编号</th>
+            <td>237.58.111</td>
+        </tr>
+    </table>
+    <p>该产品已取得FCC认证，请点击<a href="/assets/FT120/fcc.pdf">此处</a>下载证书，
+        点击<a href="https://apps.fcc.gov/oetcf/eas/reports/ViewExhibitReport.cfm?mode=Exhibits&RequestTimeout=500
+        &calledFromFrame=N&application_id=1pe0Y6A2kgR9I8D6Uz7BzQ%3D%3D&fcc_id=TCN006">此处</a>查看认证详细资料
+    </p>
+    <p>点击<a href="/assets/FT120/catalog/FT120英文单页.pdf">此处</a>查看产品单页</p>
+    <p>点击<a href="\assets\FT120\ft120_op_ins.pdf">此处</a>查看产品英文操作手册</p>
+    
+    <div class="responsive"><img src="/assets/FT120/FT120.jpg" alt=""></div>
+</body>
 </html>
