--- a/assets/FT200/FT200-videos.html
+++ b/assets/FT200/FT200-videos.html
@@ -4,7 +4,13 @@ title: 操作视频/Videos
 parent: FT200
 has_children: true
 ---
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ft200 operation instructions</title>
     <style>
         p {bottom: 10%;}
     </style>
@@ -12,4 +18,6 @@ has_children: true
 <body>
     <h2>{{page.title}}</h2>
     <p>请点击<a href="\assets\FT200\ft200-operation-guide.pdf">此处</a>下载英文操作指引</p>
+    <p>请点击<a href="\assets\FT200\ft200_programming_keys_cn.pdf">此处</a>下载中文操作指引（编制用户卡）</p>
 </body>
+</html>
