added add-on files

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -96,6 +96,13 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.001 225.dlkAddon">001 225-001 227(报警+‘1|3’双读头)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 225.dlkAddon">001 225-001 227(报警+‘2|2’双读头)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 225.dlkAddon">001 225-001 227(报警)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 312.dlkAddon">001 312-001 314</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 324.dlkAddon">001 324-001 326</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 327.dlkAddon">001 327-001 329</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 330.dlkAddon">001 330-001 332</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 339.dlkAddon">001 339-001 341</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 519.dlkAddon">001 519-001 521</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 336.dlkAddon">001 336-001 338(‘2|2’双读头)</a></li>
 
 
 
