--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -103,6 +103,7 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 339.dlkAddon">001 339-001 341</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 519.dlkAddon">001 519-001 521</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 336.dlkAddon">001 336-001 338(‘2|2’双读头)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.dlkAddon">001 504-001 506(报警+‘2|2’双读头)</a></li>
 
 
 
