modified the layout of power page

--- a/power-supply.html
+++ b/power-supply.html
@@ -47,20 +47,34 @@ has_children: false
             <summary>性价比款(833.02.999)</summary>
             <ul>
                 <li><a href="\assets\power-supply\domestics\domestics-catalog.pdf">单页</a></li>
-                <li><a href="\assets\power-supply\domestics\domestic-fcc.pdf">FCC认证</a></li>
-                <li><a href="\assets\power-supply\domestics\domestic-ul.pdf">UL认证</a></li>
-                <li><a href="\assets\power-supply\domestics\domestic-kc.pdf">KC认证</a></li>
+                <li>
+                    <details>
+                        <summary>认证</summary>
+                        <ul>
+                            <li><a href="\assets\power-supply\domestics\domestic-fcc.pdf">FCC认证</a></li>
+                            <li><a href="\assets\power-supply\domestics\domestic-ul.pdf">UL认证</a></li>
+                            <li><a href="\assets\power-supply\domestics\domestic-kc.pdf">KC认证</a></li>
+                        </ul>
+                    </details>
+                </li>
             </ul>
         </details>
         <details>
             <summary>稳定款(<a href="https://www.hafele.com.de/en/product/driver-ps-4/P-00926506/">237.58.180</a>)</summary>
             <ul>
                 <li><a href="\assets\power-supply\overseas\overseas-catalog.pdf">单页</a></li>
-                <li><a href="\assets\power-supply\overseas\certificate\australia_certificate.pdf">澳大利亚认证</a></li>
-                <li><a href="\assets\power-supply\overseas\certificate\ul_certificate.pdf">'UL'认证</a></li>
-                <li><a href="\assets\power-supply\overseas\certificate\siq_certificate.pdf">'SIQ'认证</a></li>
-                <li><a href="\assets\power-supply\overseas\certificate\cb_test_si-5843.pdf">cb_test_si-5843</a></li>
-                <li><a href="\assets\power-supply\overseas\certificate\cb_test_si-7328.pdf">cb_test_si-7328</a></li>
+                <li>
+                    <details>
+                        <summary>认证</summary>
+                        <ul>
+                            <li><a href="\assets\power-supply\overseas\certificate\australia_certificate.pdf">澳大利亚认证</a></li>
+                            <li><a href="\assets\power-supply\overseas\certificate\ul_certificate.pdf">'UL'认证</a></li>
+                            <li><a href="\assets\power-supply\overseas\certificate\siq_certificate.pdf">'SIQ'认证</a></li>
+                            <li><a href="\assets\power-supply\overseas\certificate\cb_test_si-5843.pdf">cb_test_si-5843</a></li>
+                            <li><a href="\assets\power-supply\overseas\certificate\cb_test_si-7328.pdf">cb_test_si-7328</a></li>
+                        </ul>
+                    </details>
+                </li>
             </ul>
         </details>
         
