modified the layout of various main pages

--- a/EFL30.html
+++ b/EFL30.html
@@ -4,45 +4,55 @@ title: EFL30/30C
 permalink: /EFL30/
 has_children: true
 ---
-<html>
-    <head>
-        <style>
-            .responsive {float: right; width: 40%; height: auto;}
-            .title {color: #991601;}
-            table {text-align: left; table-layout: auto; width: fit-content;}
-        </style>
-    </head>
-    <body>
-        <h2><a class="title"
-            href="https://www.hafele.com.de/en/product/-/P-01526829/#SearchParameter=&@QueryTerm=efl30&@P.FF.followSearch=9449&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=4&ProductListSize=18&PDP=true">
-            {{ page.title }}</a>
-        </h2>
-        <table>
-            <tr>
-                <th>名称</th>
-                <th>编号</th>
-            </tr>
-            <tr>
-                <td>EFL30</td>
-                <td>237.59.070</td>
-            </tr>
-            <tr>
-                <td>EFL30C</td>
-                <td>237.59.071</td>
-            </tr>
-            <tr>
-                <td>外接读头（可选）</td>
-                <td>237.59.063</td>
-            </tr>
-            <tr>
-                <td>外接电源线（可选）</td>
-                <td>237.59.102</td>
-            </tr>
-        </table>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ page.title }}</title>
+    <style>
+        .responsive {float: right; width: 40%; height: auto;}
+        .title {color: #991601;}
+        table {text-align: left; table-layout: auto; width: fit-content;}
+    </style>
+</head>
+<body>
+    <h2><a class="title"
+        href="https://www.hafele.com.de/en/product/-/P-01526829/">
+        {{ page.title }}</a>
+    </h2>
+    <table>
+        <tr>
+            <th>名称</th>
+            <th>编号</th>
+        </tr>
+        <tr>
+            <td>EFL30</td>
+            <td>237.59.070</td>
+        </tr>
+        <tr>
+            <td>EFL30C</td>
+            <td>237.59.071</td>
+        </tr>
+        <tr>
+            <td>外接读头（可选）</td>
+            <td>237.59.063</td>
+        </tr>
+        <tr>
+            <td>外接电源线（可选）</td>
+            <td>237.59.102</td>
+        </tr>
+    </table>
+    <div class="responsive"><img src="/assets/EFL30/EFL30.jpg" alt=""></div>
+
+    <details>
+        <summary>单页</summary>
         <ul>
             <li><a href="/assets/EFL30/catalog/EFL30中文单页.pdf">中文单页</a></li>
             <li><a href="/assets/EFL30/catalog/EFL30英文单页.pdf">英文单页</a></li>
         </ul>
-        <div class="responsive"><img src="/assets/EFL30/EFL30.jpg" alt=""></div>
-    </body>
+    </details>
+     
+</body>
 </html>
