--- a/EFL50.html
+++ b/EFL50.html
@@ -52,16 +52,21 @@ has_children: true
             </td>
         </tr>
     </table>
+    <div class="responsive"><img src="\assets\EFL50\EFL50.jpg" alt=""></div>
+
     <p>另外，请根据需求选购<a href="https://www.hafele.com.de/en/product/locking-component-efl50-with-push-to-open-function/P-01299036/">反弹开启锁片</a>
         或模式切换卡(<a href="\assets\EFL50\efl50-wellness.jpg" data-lightbox="key">健身房模式</a>,
         <a href="\assets\EFL50\efl50-bolt.jpg" data-lightbox="key">通道模式</a>,
         <a href="\assets\EFL50\efl50-standard.jpg" data-lightbox="key">标准模式</a>)
     </p>
-    <ul>
-        <li><a href="\assets\EFL50\efl50-catalog-cn.pdf">中文单页</a></li>
-        <li><a href="\assets\EFL50\efl50-catalog-en.pdf">英文单页</a></li>
-    </ul>
-    <div class="responsive"><img src="\assets\EFL50\EFL50.jpg" alt=""></div>
+    <details>
+        <summary>单页</summary>
+        <ul>
+            <li><a href="\assets\EFL50\efl50-catalog-cn.pdf">中文单页</a></li>
+            <li><a href="\assets\EFL50\efl50-catalog-en.pdf">英文单页</a></li>
+        </ul>
+    </details>
+    
     <script src="\js\lightbox-plus-jquery.js"></script>
 </body>
 </html>
