--- a/FT120.html
+++ b/FT120.html
@@ -10,7 +10,7 @@ has_children: true
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ft120</title>
+    <title>{{ page.title }}</title>
     <style>
         .title {color: #991601;}
         table {text-align: left; table-layout: auto; width: fit-content;}
@@ -25,7 +25,7 @@ has_children: true
 </head>
 <body>
     <h2><a class="title"
-        href="https://www.hafele.com.de/en/product/furniture-terminal-ft-120-dialock-for-controlling-efl-locks/000000200003c0e900070023/#SearchParameter=&@QueryTerm=ft120&@P.FF.followSearch=9585&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=22&PDP=true">
+        href="https://www.hafele.com.de/en/product/furniture-terminal-ft-120-dialock-for-controlling-efl-furniture-locks/P-00871705/">
         {{ page.title }}</a>
     </h2>
     <table>
