--- a/WT210.html
+++ b/WT210.html
@@ -15,7 +15,7 @@ has_children: true
     </head>
     <body>
         <h2><a class="title"
-            href="https://www.hafele.com.de/en/product/wall-terminal-wt-210-dialock-for-indoor-or-outdoor-use/P-01238689/#SearchParameter=&@QueryTerm=wt210&Category=xagKAOsCLs8AAAF8v.4pXFSd&@P.FF.followSearch=9688&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=3&PDP=true">
+            href="https://www.hafele.com.de/en/product/wall-terminal-wt-210-dialock-for-indoor-or-outdoor-use/P-01238689/">
             {{ page.title }}</a>
         </h2>
         <table>
