--- a/assets/EFL30/external.html
+++ b/assets/EFL30/external.html
@@ -1,9 +1,15 @@
 ---
 layout: page
-title: 外接部件/external
+title: 可选配件/optionals for efl30
 parent: EFL30/30C
 ---
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{page.title}}</title>
     <style>
         figure {margin-top: 3%; width: 80%; height: auto;}
         .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
@@ -24,3 +30,4 @@ parent: EFL30/30C
     </div>
     <p>也可点击<a href="https://www.bilibili.com/video/BV1KS4y1c7Pd?share_source=copy_web">此处</a>至B站观看此视频</p>
 </body>
+</html>
