--- a/EFL3.html
+++ b/EFL3.html
@@ -4,60 +4,71 @@ title: EFL3/3c
 permalink: /EFL3
 has_children: false
 ---
-<html>
-    <head>
-        <style>
-            .title {color: #991601;}
-            table {text-align: left; table-layout: auto; width: fit-content;}
-            .column {
-                float: left;
-                width: 33.33%;
-                padding: 5px;
-                margin: 5%;
-            }
-            .row::after {
-                content: '';
-                clear: both;
-                display: table;
-            }
-        </style>
-    </head>
-    <body>
-        <h2><a class="title" href="https://www.hafele.com.de/en/product/
-            furniture-lock-haefele-dialock-efl-3-3c-mains-operated-lock/
-            0000015f0001e57b00020023/#SearchParameter=&@QueryTerm=efl3&@
-            P.FF.followSearch=9690&PageNumber=1&OriginalPageSize=12&
-            PageSize=12&Position=1&OrigPos=1&ProductListSize=46&PDP=true">{{ page.title }}</a>
-        </h2>
-        <table>
-            <tr>
-                <th>名称</th>
-                <th>编号</th>
-            </tr>
-            <tr>
-                <td>EFL3</td>
-                <td>237.59.000</td>
-            </tr>
-            <tr>
-                <td>EFL3C</td>
-                <td>237.59.001</td>
-            </tr>
-            <tr>
-                <td><a href="https://www.hafele.com.de/en/product/locking-component-for-efl-3-3c-dialock-furniture-locks-tolerance-compensation-in-lowering-direction-for-screw-fixing/P-01319538/">
-                    锁片
-                    </a>
-                </td>
-                <td>237.59.028</td>
-            </tr>
-        </table>
-        <ul>
-            <li><a href="\assets\EFL3\efl3-en.pdf">英文单页</a></li>
-            <li><a href="\assets\EFL3\efl3-cn.pdf">中文单页</a></li>
-            <li><a href="\assets\EFL3\efl3_mounting.pdf">安装示意图</a></li>
-        </ul>
-        <div class="row">
-            <div class="column"><img src="\assets\EFL3\EFL3.jpg" alt=""></div>
-            <div class="column"><img src="\assets\EFL3\locking-piece.jpg" alt="" style="width: 50%;"></div>
-        </div>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ page.title }}</title>
+    <style>
+        .title {color: #991601;}
+        table {text-align: left; table-layout: auto; width: fit-content;}
+        .column {
+            float: left;
+            width: 33.33%;
+            padding: 5px;
+            margin: 5%;
+        }
+        .row::after {
+            content: '';
+            clear: both;
+            display: table;
+        }
+    </style>
+</head>
+<body>
+    <h2><a class="title" href="https://www.hafele.com.de/en/product/
+        furniture-lock-haefele-dialock-efl-3-mains-operated-lock-vertical-tolerance-compensation/P-01319526/">{{ page.title }}</a>
+    </h2>
+    <table>
+        <tr>
+            <th>名称</th>
+            <th>编号</th>
+        </tr>
+        <tr>
+            <td>EFL3</td>
+            <td>237.59.000</td>
+        </tr>
+        <tr>
+            <td>EFL3C</td>
+            <td>237.59.001</td>
+        </tr>
+        <tr>
+            <td><a href="https://www.hafele.com.de/en/product/locking-component-for-efl-3-3c-dialock-furniture-locks-tolerance-compensation-in-lowering-direction-for-screw-fixing/P-01319538/">
+                锁片
+                </a>
+            </td>
+            <td>237.59.028</td>
+        </tr>
+    </table>
+    <div class="row">
+        <div class="column"><img src="\assets\EFL3\EFL3.jpg" alt=""></div>
+        <div class="column"><img src="\assets\EFL3\locking-piece.jpg" alt="" style="width: 50%;"></div>
+    </div>
+    <ul>
+        <li>
+            <details>
+                <summary>单页</summary>
+                <ul>
+                    <li><a href="\assets\EFL3\efl3-en.pdf">英文单页</a></li>
+                    <li><a href="\assets\EFL3\efl3-cn.pdf">中文单页</a></li>
+                </ul>
+            </details>
+        </li>
+       
+        <li><a href="\assets\EFL3\efl3_mounting.pdf">安装示意图</a></li>
+    </ul>
+    
+</body>
 </html>
