--- a/assets/emergency/test-unit-one-lock.html
+++ b/assets/emergency/test-unit-one-lock.html
@@ -4,25 +4,32 @@ title: 测试器连接一个锁头
 parent: 使用测试器手动开锁
 grand_parent: 紧急开锁/emergency
 ---
-<html>
-    <head>
-        <style>
-            img {width: 55%; height: auto; margin-top: 3%;}
-            .responsive {padding-bottom: 75%; position: relative;}
-            .video {width: 100%; height: 100%; position: absolute;}
-        </style>
-    </head>
-    <body>
-        <h2>{{ page.title }}</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ page.title }}</title>
+    <style>
+        img {width: 55%; height: auto; margin-top: 1em;}
+        .responsive {padding-bottom: 75%; position: relative;}
+        .video {width: 100%; height: 100%; position: absolute;}
+        em {color: brown;}
+    </style>
+</head>
+<body>
+    <h2>{{ page.title }}</h2>
         <p style="margin-top: 3%;">
             下图展示了测试器连接一个锁头的连线方式。测试器连线和连接器需预先连接至FT200。
             紧急情况下，将测试器连入系统，拨动测试器开关，即可实现紧急开锁。此方法适用于FT200无法接入电源的情况。
             详见如下视频。
         </p>
-        <img src="\assets\emergency\test-unit\go-to-lock.jpg" alt="">
+        <em>（请注意如果控制器已导入报警宏并正常工作中，接入测试器会触发警报。测试器用于控制器断电时开锁使用，控制器正常工作时请勿接入测试器。）</em>
+        <figure><img src="\assets\emergency\test-unit\go-to-lock.jpg" alt=""></figure>
         <div class="responsive">
             <iframe src="//player.bilibili.com/player.html?aid=380778696&bvid=BV1Ff4y1F7iR&cid=488375442&page=1" 
             scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
         </div>
-    </body>
+</body>
 </html>
