added the feature of searching add-on file

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -11,6 +11,8 @@ parent: app(HDM)
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dialock ft200 add-on</title>
     <link rel="stylesheet" href="\css\ft200_addon.css">
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+    <script src="\js\addonSelection.js"></script>
     
 
 </head>
@@ -28,6 +30,7 @@ parent: app(HDM)
             <figcaption>读头侧</figcaption>
         </figure>
     </div>
+    <input type="text" name="serialNumber" id="serialNumber" placeholder="请在此输入您的蓝牙卡片序列号"> 
     <ul id="add_on_list">
         <li><a download href="/assets/app-hdm/add-on/FT200/AlrmPrem_AKC169-171_FT200.Signed.dlkAddon">169-171</a></li>
         <li><a download href="/assets/app-hdm/add-on/FT200/AlrmPrem_AKC175-177_FT200.Signed.dlkAddon.dlkAddon">175-177</a></li>
