--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -12,6 +12,7 @@ parent: app(HDM)
     <title>dialock ft200 add-on</title>
     <link rel="stylesheet" href="\css\ft200_addon.css">
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+    <script src="\js\jquery-3.6.2.min.js"></script>
     <script src="\js\addonSelection.js"></script>
     
 
