added another add-on file

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -105,7 +105,8 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 330.dlkAddon">001 330-001 332</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 339.dlkAddon">001 339-001 341</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 519.dlkAddon">001 519-001 521</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 336.dlkAddon">001 336-001 338(‘2|2’双读头)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 336.dlkAddon">001 336-001 338(报警+‘2|2’双读头)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22014-Dual Antenna.Signed.FT200.001 336.dlkAddon">001 336-001 338(‘2|2’双读头)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 321.dlkAddon">001 321-001 323(报警)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.001 504.dlkAddon">001 504-001 506(报警+'2|2'双读头)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 204.dlkAddon">001 204-001 206(报警+'2|2'双读头)</a></li>
