--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -30,7 +30,7 @@ parent: app(HDM)
             <figcaption>读头侧</figcaption>
         </figure>
     </div>
-    <input type="text" name="serialNumber" id="serialNumber" placeholder="请在此输入您的蓝牙卡片序列号"> 
+    <input type="text" name="serialNumber" id="serialNumber" placeholder="请在此输入您的蓝牙卡片序列号" onfocus="this.value=''"> 
     <ul id="add_on_list">
         <li><a download href="/assets/app-hdm/add-on/FT200/AlrmPrem_AKC169-171_FT200.Signed.dlkAddon">169-171</a></li>
         <li><a download href="/assets/app-hdm/add-on/FT200/AlrmPrem_AKC175-177_FT200.Signed.dlkAddon.dlkAddon">175-177</a></li>
