--- a/app(HDM).html
+++ b/app(HDM).html
@@ -15,7 +15,6 @@ has_children: true
         .video {width: 100%; height: 100%; position: absolute;}
         .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
         table {margin-top: 3%;}
-        caption {text-align: left;}
         .panel {
             background-color: beige;
             text-align: center;
@@ -41,25 +40,27 @@ has_children: true
     </div>
     <table>
         <caption >使用该app的独立模式编制设备，需要用到以下三种物料：</caption>
-        <tr>
+        <thead>
             <th>名称</th>
             <th>编号</th>
             <th>数量</th>
-        </tr>
-        <tr>
-            <td><a href="\assets\app-hdm\akc.jpg" data-lightbox="akc">AKC(编程卡片)</a></td>
-            <td>917.64.980</td>
-            <td>1套(3张)</td>
-        </tr>
-        <tr>
-            <td><a href="/assets/app-hdm/FT200-add-on.html">宏文件(add-on)</a></td>
-            <td>910.52.191</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <td><a href="\assets\app-hdm\apk.html">app(HDM)</a></td>
-            <td></td>
-        </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><a href="\assets\app-hdm\akc.jpg" data-lightbox="akc">AKC(编程卡片)</a></td>
+                <td>917.64.980</td>
+                <td>1套(3张)</td>
+            </tr>
+            <tr>
+                <td><a href="/assets/app-hdm/FT200-add-on.html">宏文件(add-on)</a></td>
+                <td>910.52.191</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td><a href="\assets\app-hdm\apk.html">app(HDM)</a></td>
+                <td></td>
+            </tr>
+        </tbody>
     </table>
     <p>如下问答展示了以上物料的采购流程，请海福乐销售人员根据该流程下单采购AKC和宏文件</p>
     <div class="panel">
