--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -114,7 +114,7 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 318.dlkAddon">001 318-001 320(报警)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 531.dlkAddon">001 531-001 533(报警+'2|2'双读头)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 342.dlkAddon">001 342-001 344(报警+'2|2'双读头)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 528.dlkAddon">001 528-001 530(报警+'2|2'双读头)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 528.dlkAddon">001/528 529 530(报警+'2|2'双读头)</a></li>
 
     </ul>
     <p>请点击<a href="https://haefele-my.sharepoint.com/:f:/r/personal/chao_ye_hafele_com_cn/Documents/%E5%86%85%E9%83%A8%20HDM%20%E7%9B%B8%E5%85%B3%E8%B5%84%E6%96%99?csf=1&web=1&e=fhnJnV">此处</a>
