--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 
 layout: home
 ---
-<html>
-    <head></head>
-    <body>
-        <h2>海福乐(Hafele)中国子公司</h2>
-        <h3>电子锁产品</h3>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>hafele <e-lock></title>
+</head>
+<body>
+    <h2>海福乐(Hafele)中国子公司</h2>
+    <h3>电子锁产品</h3>
+</body>
 </html>
