added another add-on p/n.

--- a/app(HDM).html
+++ b/app(HDM).html
@@ -26,14 +26,14 @@ has_children: true
             margin-top: 2%;
         }
     </style>
-    <link rel="stylesheet" href="\css\lightbox.min.css"> 
+    <link rel="stylesheet" href="\css\lightbox.min.css">
+    <link rel="stylesheet" href="\css\tableStyle.css">
 </head>
 <body>
     <h2>HMDM(Hafele my Dialock Manager)</h2>
     <p>以下视频为您介绍了HMDM app的两种使用模式。您可以使用独立模式并用该app导入您需要的扩展功能。
         您也可以使用项目模式，将一个店铺中的所有设备添加入一个虚拟店铺中。
         这样您可以定制化管理设备，卡片，帮助您快速完成一整个店铺的锁具设置。</p>
-    
     <div class="responsive">
         <iframe frameborder="0" src="https://tv.sohu.com/s/sohuplayer/iplay.html?bid=385271121&autoplay=true&disablePlaylist=true" 
         allowFullScreen="true" scrolling="no" class="video"></iframe>
@@ -53,7 +53,12 @@ has_children: true
             </tr>
             <tr>
                 <td><a href="/assets/app-hdm/FT200-add-on.html">宏文件(add-on)</a></td>
-                <td>910.52.191</td>
+                <td>
+                    <select name="" id="">
+                        <option value="">910.52.191(只报警)</option>
+                        <option value="">910.52.190(除'只报警'以外所有)</option>
+                    </select>
+                </td>
                 <td>1</td>
             </tr>
             <tr>
