--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -13,8 +13,6 @@ parent: app(HDM)
     <link rel="stylesheet" href="\css\ft200_addon.css">
     <script src="\js\jquery-3.6.2.min.js"></script>
     <script src="\js\addonSelection.js"></script>
-    
-
 </head>
 <body>
     <h3 id="title">请根据对应的AKC序列号，点击以下链接下载add-on</h3>
@@ -108,7 +106,8 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 336.dlkAddon">001 336-001 338(报警+‘2|2’双读头)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22014-Dual Antenna.Signed.FT200.001 336.dlkAddon">001 336-001 338(‘2|2’双读头)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 321.dlkAddon">001 321-001 323(报警)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.001 504.dlkAddon">001 504-001 506(报警+'2|2'双读头)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.001 504.dlkAddon">001/504 505 506(报警+'1|3'双读头)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 504.dlkAddon">001/504 505 506(报警+'2|2'双读头)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 204.dlkAddon">001 204-001 206(报警+'2|2'双读头)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 333.dlkAddon">001 333-001 335(报警+'2|2'双读头)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 318.dlkAddon">001 318-001 320(报警)</a></li>
