added nother add-on file

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -114,6 +114,7 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 531.dlkAddon">001 531-001 533(报警+'2|2'双读头)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 342.dlkAddon">001 342-001 344(报警+'2|2'双读头)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 528.dlkAddon">001/528 529 530(报警+'2|2'双读头)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 525.dlkAddon">001/525 526 527(报警)</a></li>
 
     </ul>
 </body>
